[package]
name = "psd-to-png-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework
eframe = "0.28.0"
egui = "0.28.0"

# Image processing
image = "0.24"
psd = "0.2.0"

# File system operations
walkdir = "2.4"
notify = "6.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Progress tracking
indicatif = "0.17"

# Logging
log = "0.4"
env_logger = "0.10"

# File dialogs
rfd = "0.12"

# Windows configuration to suppress console window
[[bin]]
name = "psd-to-png-converter"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }
